--- a/templates/partida/inici.html.twig
+++ b/templates/partida/inici.html.twig
@@ -38,7 +38,7 @@
             </div>
 
             <div id='perfilFloat' class='alltransition3'>
-                <label>{{app.user.nom|slice(0, 1)}}</label>
+                <label class="alltransition3">{{app.user.nom|slice(0, 1)}}</label>
             </div>
         </div>
     </div>
