--- a/templates/nivell/index.html.twig
+++ b/templates/nivell/index.html.twig
@@ -34,7 +34,7 @@
         <tr>
             <th scope="col">Nivell</th>
             <th scope="col">Grups</th>
-            <th scope="col">Temas</th>
+            <th scope="col">Temes</th>
             <th scope="col">Accions</th>  
         </tr>
     </thead>
@@ -67,7 +67,7 @@
 
                 {% else %}
 
-                No té temas
+                No té temes
                 
             {% endfor %}
 
