fixes, new cookie, moltes funcions afegides a jugar

--- a/templates/partida/board.html.twig
+++ b/templates/partida/board.html.twig
@@ -2,7 +2,7 @@
         <img class="board-img" src="{{ asset('img/nuevooo.png') }}" alt="">
         <div class="caselles">
           <!-- BOTON CENTRAL-->
-          <div id="box-start" class="casilla"></div>
+          <div id="box_start" class="casilla"></div>
           <!-- BARRA SUPERIOR DERECHA-->
           <div id="box1" class="casilla"></div>   
           <div id="box2" class="casilla"></div>
