--- a/public/css/joc.css
+++ b/public/css/joc.css
@@ -42,8 +42,44 @@ button {
 }
 
 .progress {
-    background-color: transparent!important;
+    background-color: grey!important;
     margin-bottom: 10px;
+}
+
+.iconaJugador {
+    -webkit-text-stroke: 1px #fff;
+    
+}
+
+.modal-lg {
+    max-width: 60% !important;
+}
+
+.modal-content {
+    background-color: #fff;
+    color: #292929;
+    box-shadow: 0px 0px 5px grey;
+    padding-bottom: 40px;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+
+.modal-header {
+    color: #fff;
+    margin: 0 auto;
+    width: 100%;
+    padding: 20px 40px;
+    background-color: #876EDF;
+    border-bottom: 1px solid #876EDF;
+}
+
+.header-quesito {
+    background-size: 50%;
+    background-image: url(https://css-tricks.com/wp-content/themes/CSS-Tricks-17/images/featured-comment.svg);
+}
+
+.modal-body {
+    padding: 20px 80px;
 }
 
 .quesitos {
@@ -142,20 +178,20 @@ button {
 #est-bar1 {
     background-color: #F0D54E;
 }
-#est-bar1-1 {
+#est-bar1-2 {
     background-color: #DD9334;
 }
 #est-bar2 {
     background-color: #5CB85C;
 }
-#est-bar1-2 {
+#est-bar2-2 {
     background-color: #189218;
 }
 
 #est-bar3 {
     background-color: #876EDF;
 }
-#est-bar1-3 {
+#est-bar3-2 {
     background-color: #583EB0;
 }
 
@@ -163,7 +199,7 @@ button {
     background-color: #5BBFDE;
 }
 
-#est-bar1-4 {
+#est-bar4-2 {
     background-color: #0283AC;
 }
 
@@ -171,7 +207,7 @@ button {
     background-color: #D9534F;
 }
 
-#est-bar1-5 {
+#est-bar5-2 {
     background-color: #C12824;
 }
 
@@ -188,6 +224,10 @@ button {
     background: linear-gradient(to bottom, #AFD0E8, #005a9e 70%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+.amagat {
+    display: none;
 }
 
 .points-shadow {
@@ -207,12 +247,9 @@ button {
 
 /* dau */
 
-#result, #result-shadow {
+#result {
     font-size: 6em;
     font-family: 'Baloo Bhai', cursive;
-}
-
-#result {
     text-align: center;
     background: linear-gradient(to bottom, #DF58B4, #85009E 70%);
     -webkit-background-clip: text;
@@ -475,11 +512,9 @@ button:focus {
 }
 
 .jugadors > .row {
-    border-bottom: 1px dotted grey;
+    border-bottom: 1px solid #292929;
 }
-.jugadors .row:last-child {
-    border-bottom: none;
-}
+
 
 .jugadors > .row.actual {
     width: 120%;
@@ -491,7 +526,7 @@ button:focus {
 .jugadors > .row.actual::after {
     position: absolute;
     left: 0;
-    bottom: 0;
+    bottom: -3px;
     width: 100%;
     height: 3px;
     content: '';
@@ -503,7 +538,7 @@ button:focus {
 .jugadors > .row.actual::before {
     position: absolute;
     left: 0;
-    bottom: 0;
+    bottom: -3px;
     width: 100%;
     height: 3px;
     content: '';
@@ -529,7 +564,7 @@ button:focus {
     height: 60px;
     font-size: 1em;
     line-height: 60px;
-    background-color: grey;
+    background-color: transparent;
     color: #fff;
     display: inline-block;
     padding: 0 30px;
@@ -540,7 +575,7 @@ button:focus {
     height: 60px;
     width: 60px;
     line-height: 60px;
-    background-color: #B9B9B9;
+    background-color: rgba(255, 255, 255, 0.3);
     color: #fff;
     display: inline-block;
     text-align: center;
@@ -550,16 +585,17 @@ button:focus {
 }
 
 .ranking::after {
-    content: '';
+    font-family: "Font Awesome 5 Free";
+    content: '\f559';
+    font-weight: 900;
+    font-size: 3rem;
     position: absolute;
     width: 60%;
     height: 60%;
-    background-color: #fff;
-    opacity: 0.2;
-    border-radius: 50%;
-    top: 50%;
+    opacity: 0.3;
+    top: 2%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
     z-index: -1;
 }
 
@@ -614,12 +650,110 @@ button:focus {
 }
 
 .casilla {
-  z-index: 3;
-  background: transparent;
-  pointer-events: none;
+    z-index: 3;
+    background: transparent;
+    pointer-events: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    overflow: visible;
 }
 
-#box-start {
+.casilla > div {
+    
+    z-index: 4;
+    
+    
+}
+
+.casilla > div:nth-of-type(1) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.alert {
+    transition: all 0.3s ease-out;
+}
+
+.alert-info {
+    background-color: #8EC5CF!important;
+    border: 1px solid #8EC5CF!important;;
+}
+
+.alert-danger {
+    background-color: #DE6867!important;
+    border: 1px solid #DE6867!important;
+}
+
+.alert-success {
+    background-color: #83C55D!important;
+    border: 1px solid #83C55D!important;
+}
+
+.alert:hover {
+    background-color: #FFDB70!important;
+    border: 1px solid #FFDB70!important;
+}
+
+.resposta {
+    background-color: rgb(255, 255, 255, 0.3);
+}
+
+.preguntaNum::after {
+    position: relative;
+    display: block;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    font-weight: bold;
+}
+
+#respostaA > .preguntaNum::after {
+    content: 'A';  
+}
+
+#respostaB > .preguntaNum::after {
+    content: 'B';  
+}
+
+#respostaC > .preguntaNum::after {
+    content: 'C';  
+}
+
+#respostaD > .preguntaNum::after {
+    content: 'D';  
+}
+
+.casilla > div:nth-of-type(2) {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.casilla > div:nth-of-type(3) {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.casilla > div:nth-of-type(4) {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+.casilla > div:nth-of-type(5) {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+
+#box_start {
     width: 7.6%;
     height: 8%;
     border-radius: 20%;
@@ -629,7 +763,7 @@ button:focus {
     transform: translate(-180%, -50%);
 }
 
-#box-start::after {
+#box_start::after {
     content: 'START';
     font-family: 'Baloo Bhai', cursive;
     position: absolute;
