--- a/templates/partida/joc.html.twig
+++ b/templates/partida/joc.html.twig
@@ -17,21 +17,21 @@
   <div class="left-side col-2">
     <div class="points-container pl-3 pt-4">
     	<div class="points">
-    		<i class="fas fa-trophy points-ico"></i> 73923
+    		<i class="fas fa-trophy points-ico"></i> 0
     	</div>
       <div class="points-shadow pl-3 pt-4">
-        <i class="fas fa-trophy"></i> 73923
+        <i class="fas fa-trophy"></i> 0
       </div>
     </div>
 
    {% include 'partida/estadistiques.html.twig' %}
   </div>
       <div class="quesitos">
-        <div class="groc"></div>
-        <div class="verd "></div>
-        <div class="lila"></div>
-        <div class="blau"></div>
-        <div class="vermell"></div>
+        <div class="groc no-quesito"></div>
+        <div class="verd no-quesito"></div>
+        <div class="lila no-quesito"></div>
+        <div class="blau no-quesito"></div>
+        <div class="vermell no-quesito"></div>
       </div>
 
   <div class="col-2 p-0 right-side">
@@ -45,12 +45,49 @@
 
   {% include 'partida/dau.html.twig' %}
 
-  <div class="btn-container">
+  <div id="botoDau" class="btn-container amagat">
     <button class="tirarDau">TIRAR</button>
   </div>
    {% include 'partida/board.html.twig' %} 
 
   <div class="opcions"><button><i class="fas fa-cogs"></i></button></div>
+
+    <div id="modalPregunta" class="modal" tabindex="-1" role="dialog" data-backdrop="static">
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header d-flex justify-content-between">
+                    <div><h5 id="modalTitol" class="modal-title">Tema</h5></div><div><h5 class="modal-title"><i class="fas fa-stopwatch text-white fa-lg mr-2"></i><span id="time">30</span>''</h5></div>
+                </div>
+                <div class="modal-body">
+                    <div class="row ">
+                        <div id="pregunta" class="mt-3 mb-5" style="font-size: 1.2rem">Pregunta: blablalalalalallala?</div>
+                    </div>
+                    <div class="row d-flex justify-content-between mb-2">
+                        <div id="respostaA" style="width: 49%!important;" class="alert alert-info p-0 row m-0">
+                            <div class="preguntaNum col-2 p-3"></div>
+                            <div class="col-10 resposta p-3" style="word-wrap: break-word;">RespostaAadssaddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</div>
+                        </div>
+                         <div id="respostaB" style="width: 49%!important;" class="alert alert-info p-0 row m-0">
+                            <div class="preguntaNum col-2 p-3"></div>
+                            <div class="col-10 resposta p-3" style="word-wrap: break-word;">dadasdsadasdsadsda</div>
+                        </div>
+                    </div>
+                    <div class="row d-flex justify-content-between">
+                        <div id="respostaC" style="width: 49%!important;" class="alert alert-info p-0 row m-0">
+                            <div class="col-2 p-3 preguntaNum"></div>
+                            <div class="col-10 resposta p-3" style="word-wrap: break-word;">RespostaAadssadddddddddddddddddddddddddddddddddddddddd</div>
+                        </div>
+                         <div id="respostaD" style="width: 49%!important;" class="alert alert-info p-0 row m-0">
+                            <div class="preguntaNum col-2 p-3"></div>
+                            <div class="col-10 resposta p-3" style="word-wrap: break-word;">dadasdsadasdsadsda</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 <script>
 	{% include 'partida/js/joc.js' %}
 </script>
