--- a/templates/partida/joc.html.twig
+++ b/templates/partida/joc.html.twig
@@ -56,30 +56,30 @@
         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header d-flex justify-content-between">
-                    <div><h5 id="modalTitol" class="modal-title">Tema</h5></div><div><h5 class="modal-title"><i class="fas fa-stopwatch text-white fa-lg mr-2"></i><span id="time">30</span>''</h5></div>
+                    <div><h5 id="modalTitol" class="modal-title">Tema</h5></div><div id="timer"><h5 class="modal-title"><i class="fas fa-stopwatch fa-lg mr-2"></i><div class="d-inline-block" id="time">30</div>s</h5></div>
                 </div>
                 <div class="modal-body">
-                    <div class="row ">
+                    <div class="row">
                         <div id="pregunta" class="mt-3 mb-5" style="font-size: 1.2rem">Pregunta: blablalalalalallala?</div>
                     </div>
                     <div class="row d-flex justify-content-between mb-2">
-                        <div id="respostaA" style="width: 49%!important;" class="alert alert-info p-0 row m-0">
+                        <div id="respostaA" style="width: 49%!important;" class="respostaOpcio alert alert-info p-0 row m-0">
                             <div class="preguntaNum col-2 p-3"></div>
-                            <div class="col-10 resposta p-3" style="word-wrap: break-word;">RespostaAadssaddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</div>
+                            <div id="respostaAText" class="col-10 resposta p-3" style="word-wrap: break-word;">RespostaAadssaddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</div>
                         </div>
-                         <div id="respostaB" style="width: 49%!important;" class="alert alert-info p-0 row m-0">
+                         <div id="respostaB" style="width: 49%!important;" class="respostaOpcio alert alert-info p-0 row m-0">
                             <div class="preguntaNum col-2 p-3"></div>
-                            <div class="col-10 resposta p-3" style="word-wrap: break-word;">dadasdsadasdsadsda</div>
+                            <div id="respostaBText" class="col-10 resposta p-3" style="word-wrap: break-word;">dadasdsadasdsadsda</div>
                         </div>
                     </div>
                     <div class="row d-flex justify-content-between">
-                        <div id="respostaC" style="width: 49%!important;" class="alert alert-info p-0 row m-0">
+                        <div id="respostaC" style="width: 49%!important;" class="respostaOpcio alert alert-info p-0 row m-0">
                             <div class="col-2 p-3 preguntaNum"></div>
-                            <div class="col-10 resposta p-3" style="word-wrap: break-word;">RespostaAadssadddddddddddddddddddddddddddddddddddddddd</div>
+                            <div id="respostaCText" class="col-10 resposta p-3" style="word-wrap: break-word;">RespostaAadssadddddddddddddddddddddddddddddddddddddddd</div>
                         </div>
-                         <div id="respostaD" style="width: 49%!important;" class="alert alert-info p-0 row m-0">
+                         <div id="respostaD" style="width: 49%!important;" class="respostaOpcio alert alert-info p-0 row m-0">
                             <div class="preguntaNum col-2 p-3"></div>
-                            <div class="col-10 resposta p-3" style="word-wrap: break-word;">dadasdsadasdsadsda</div>
+                            <div id="respostaDText" class="col-10 resposta p-3" style="word-wrap: break-word;">dadasdsadasdsadsda</div>
                         </div>
                     </div>
                 </div>
