--- a/templates/bundles/FOSUserBundle/Security/login_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login_content.html.twig
@@ -48,6 +48,8 @@
                  </form>
                  <div class="col-7 mx-auto text-center"><a class="btn btn-block customOutlineBtn" href="{{ path('fos_user_registration_register') }}">{{ 'registration.submit'|trans }}</a></div>
             </div>
+                     <div class="col-7 mx-auto text-center"><a class="btn btn-link" href="{{ path('fos_user_resetting_request') }}">{{ 'resetting.request.submit'|trans }}</a></div>
+            </div>
     </div>
 
 </div>
