--- a/public/css/joc.css
+++ b/public/css/joc.css
@@ -60,8 +60,8 @@ button {
     color: #292929;
     box-shadow: 0px 0px 5px grey;
     padding-bottom: 40px;
-    border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
+    border-top-right-radius: .4rem;
+    border-top-left-radius: .4rem;
 }
 
 .modal-header {
@@ -82,6 +82,10 @@ button {
 
 #timer.scalered {
     animation: scalered 1s linear infinite;
+}
+
+#timer.out {
+    animation: timeout 1s linear forwards;
 }
 
 .header-quesito {
@@ -580,6 +584,7 @@ button:focus {
     display: inline-block;
     padding: 0 30px;
     text-shadow: 2px 2px 2px #000;
+    overflow: hidden!important;
 }
 
 .ranking {
@@ -1556,4 +1561,11 @@ button:focus {
         transform: scale(1);
         color: white;
     }
+}
+
+@keyframes timeout {
+  100% {
+    transform: scale(4) translate(-50%, 50%);
+    color: red;
+  }
 }
