fixes (getPregunta repetit a controlador, alert en usuaris s'amagava)

--- a/templates/usuari/afegirUsuari.html.twig
+++ b/templates/usuari/afegirUsuari.html.twig
@@ -83,7 +83,7 @@
 			$('.userField').on('keyup change', function() {
 				validar();
 			});	
-			setTimeout(function(){ $(".alert").alert('close') }, 5000);
+			setTimeout(function(){ $(".alert.success").alert('close') }, 5000);
 		});
 
 		function validar() {
