--- a/templates/partida/joc.html.twig
+++ b/templates/partida/joc.html.twig
@@ -17,10 +17,10 @@
   <div class="left-side col-2">
     <div class="points-container pl-3 pt-4">
     	<div class="points">
-    		<i class="fas fa-trophy points-ico"></i> 0
+    		<i class="fas fa-trophy points-ico"></i> <span id="points-span">0</span>
     	</div>
       <div class="points-shadow pl-3 pt-4">
-        <i class="fas fa-trophy"></i> 0
+        <i class="fas fa-trophy"></i> <span id="points-shadow-span">0</span>
       </div>
     </div>
 
