Pujar partida in progress

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1610,6 +1610,13 @@ input[type=password] {
 
 /* RESPONSIVE MEDIA QUERIES */
 
+@media screen and (max-width: 990px) {
+	.respostaCasella {
+		padding-left: 0px!important;
+		padding-right: 0px!important;
+	}
+}
+
 @media screen and (max-width: 1280px) {
 
 	#multiplayerLobby {
