--- a/templates/partida/jocEntrenament.html.twig
+++ b/templates/partida/jocEntrenament.html.twig
@@ -38,12 +38,12 @@
                 <div id='preguntaDiv'>
                     <div id='preguntaHead'>
                         <p id='titleHead'>
-                            <span>Tema: <span id='temaFill'>TEMAHEAD</span></span>
+                            <span>ENTRENAMENT<span id='temaFill'></span></span>
                         </p>
                     </div>
 
                     <div id='preguntaContingut' class="alltransition3" style="transform: visiblity 0.3s ease-in-out;">
-                        <p id='preguntaTitle'>PREGUNTA</p>
+                        <p id='preguntaTitle'>-</p>
                     
 
                         <div id='preguntaRespostes'>
@@ -51,13 +51,13 @@
 
                                 <div class='respostaCasella col col-md-12 col-lg-6' id='primeraResposta'>
                                     <div class='respostaInt alltransition3'>
-                                        <p>TEST</p>
+                                        <p></p>
                                     </div>
                                 </div>
 
                                 <div class='respostaCasella col col-md-12 col-lg-6' id='segonaResposta'>
                                     <div class='respostaInt alltransition3'>
-                                        <p>TEST</p>
+                                        <p></p>
                                     </div>
                                 </div>
 
@@ -66,13 +66,13 @@
 
                                 <div class='respostaCasella col col-md-12 col-lg-6' id='terceraResposta'>
                                     <div class='respostaInt alltransition3'>
-                                        <p>TEST</p>
+                                        <p></p>
                                     </div>
                                 </div>
 
                                 <div class='respostaCasella col col-md-12 col-lg-6' id='quartaResposta'>
                                     <div class='respostaInt alltransition3'>
-                                        <p>TEST</p>
+                                        <p></p>
                                     </div>
                                 </div>
 
@@ -88,16 +88,17 @@
     {% endblock %}
 
     <script>
+        urlPujarPartida = "{{urlPujarPartida}}";
+    </script>
+
+    <script src="{{ asset('js/entrenament.js') }}"></script>
+
+    <script>
 
         preguntesIds = '';
         checkPreguntesBool = false;
         preguntes = '';
         id = 0;
-
-        pregunta = '';
-        checkpreguntaBool = false;
-        respostaFinale = '';
-        checkRespostaBool = false;
 
         $(document).ready(function() {
             getPreguntes();
@@ -151,179 +152,6 @@
 
                 QuestionLoop(0);
             }
-
-        }
-
-        function QuestionLoop(id) {
-
-            if (id != preguntes.ids[0].length - 1) {
-
-                $.post(urlGetPregunta, { 'preguntaId': preguntes.ids[0][id] }) 
-                    .done(function(response) {
-                        pregunta = response;
-                });
-
-                setTimeout(function(){ checkPregunta() }, 500);
-
-            } else {
-                
-                alert("Fi de l'entrenament!");
-
-            }
-
-        }
-
-        function checkPregunta() {
-
-            if (pregunta == '') {
-                checkpreguntaBool = false;
-                checkPregunta();
-            } else {
-                checkpreguntaBool = true;
-            }
-
-            if (checkpreguntaBool) {
-                var preguntaObj = JSON.parse(pregunta);
-                pregunta = '';
-                pregunta = new Pregunta(preguntaObj);
-                preguntaObj = '';
-
-                console.log(pregunta);
-
-                updateCamps();
-            }
-
-        }
-
-        function Pregunta(obj) {
-
-            this.id = obj.id;
-            this.tema = obj.tema;
-            this.tipusid = obj.tipusid;
-            this.dificultat = obj.dificultatid;
-            this.preguntaTitle = obj.pregunta_cat;
-            
-            var preguntesArr = [];
-            var preguntesTemp = [obj.resposta1, obj.resposta2, obj.resposta3, obj.resposta4];
-
-            preguntesArr = shuffle(preguntesTemp);
-            preguntesTemp = '';
-            
-            this.resposta1 = preguntesArr[0];
-            this.resposta2 = preguntesArr[1];
-            this.resposta3 = preguntesArr[2];
-            this.resposta4 = preguntesArr[3];
-
-        }
-
-        function updateCamps() {
-
-            $('#preguntaTitle').html(pregunta.preguntaTitle);
-            $('#primeraResposta p').html(pregunta.resposta1);
-            $('#segonaResposta p').html(pregunta.resposta2);
-            $('#terceraResposta p').html(pregunta.resposta3);
-            $('#quartaResposta p').html(pregunta.resposta4);
-
-            $("#preguntaContingut").css({"visibility": "visible"});
-
-        }
-
-        $('body').on( 'click', '#primeraResposta, #segonaResposta, #terceraResposta, #quartaResposta', function() {
-            
-            var p = $("#" + this.id + " p").html();
-            checkResposta(p);
-
-        });
-
-        function checkResposta(resposta) {
-
-            $.post(urlGetResposta, { 'preguntaId': preguntes.ids[0][id], 'resposta': resposta }) 
-                .done(function(response) {
-                    respostaFinale = eval('[' + response + ']');
-            });
-
-            setTimeout(function(){ checkIfCorrecte() }, 500);
-
-        }
-
-        function checkIfCorrecte() {
-
-            //console.log(respostaFinale);
-
-            if (respostaFinale == '') {
-                checkRespostaBool = false;
-                checkIfCorrecte();
-            } else {
-                checkRespostaBool = true;
-            }
-
-            console.log(respostaFinale);
-
-            if (respostaFinale[0] == true) {
-                console.log('Correcte');
-                respostaCorrecte();
-            } else {
-                console.log('Incorrecte');
-                respostaIncorrecte();
-            }
-
-        }
-
-        function respostaCorrecte() {
-
-            marcarCaselles();
-            // SOMETHING
-            setTimeout(function(){ cleanPreg() }, 2000);
-
-        }
-
-        function respostaIncorrecte() {
-
-            marcarCaselles();
-            // SOMETHING
-            setTimeout(function(){ cleanPreg() }, 2000);
-
-        }
-
-        function cleanPreg() {
-
-            pregunta = '';
-            checkpreguntaBool = false;
-            respostaFinale = '';
-            checkRespostaBool = false;
-
-            $('.respostaCasella .respostaInt').css({
-                "border": "2px solid transparent",
-            })
-
-            $("#preguntaContingut").css({"visibility": "hidden"});
-
-            if (id != preguntes.ids[0].length - 1) {
-                id++;
-                QuestionLoop(id);
-            } else {
-                alert("Fi de l'entrenament!");
-            }
-
-        }
-
-        function marcarCaselles() {
-
-            var caselles = ['#primeraResposta', '#segonaResposta', '#terceraResposta', '#quartaResposta'];
-
-            caselles.forEach(function(casella) {
-
-                if ($(casella + " p").html() == respostaFinale[1]) {
-
-                    $(casella + " .respostaInt").css({
-                        "border": "2px solid green",
-                    });
-                } else {
-                    $(casella + " .respostaInt").css({
-                        "border": "2px solid red",
-                    });
-                }
-            });
 
         }
 
