--- a/templates/partida/joc.html.twig
+++ b/templates/partida/joc.html.twig
@@ -39,7 +39,7 @@
 
   	<div class="col-12 mt-4 pr-4 log-container">
   		<h6 class="text-white log-title">REGISTRE</h6>
-  		<div class="log"></div>
+  		<div id="log" class="log"></div>
   	</div>
   </div>
 
