--- a/templates/grup/llistatalumnes.html.twig
+++ b/templates/grup/llistatalumnes.html.twig
@@ -49,7 +49,7 @@
         <th scope="col">Nom de l'alumne</th>
         <th scope="col">Partides jugades</th>
         <th scope="col">Partides guanyades</th>
-        <th scope="col">Entrenaments finalitzats</th>
+        <th scope="col">Partides finalitzades</th>
         <th scope="col">Última activitat</th>
         <th scope="col">Accions</th>  
         </tr>
@@ -61,7 +61,23 @@
             <td scope="col">{{ alumne.nom }} {{ alumne.cognoms }}</td>
             <td scope="col">Jugades</td>
             <td scope="col">Guanyades</td>
-            <td scope="col">Entrenaments F</td>
+            <td scope="col">
+            
+            {% for comptador in comptadorPartides %}
+
+                {% if alumne["usuari_id"] == comptador["usuari_id"] %}
+
+                    {{comptador["partides"]}}
+
+                {% else %}
+
+                    0
+
+                {% endif %}
+
+            {% endfor %}
+
+            </td>
             <td scope="col">{{ alumne.last_login|date('d-m-Y | h:m') }}</td>
             <td scope="col">
                 <a href="{{path('resumalumne',{"grupid": grup.id, "alumneid": alumne["usuari_id"] }) }}"><i class="fas fa-eye link-blue mr-2"></i></a>
