--- a/public/css/joc.css
+++ b/public/css/joc.css
@@ -90,7 +90,7 @@ button {
 
 .header-quesito {
     background-size: 50%;
-    background-image: url(https://css-tricks.com/wp-content/themes/CSS-Tricks-17/images/featured-comment.svg);
+    background-image: url('../img/blancas.png');
 }
 
 .modal-body {
@@ -559,6 +559,48 @@ button:focus {
     animation: rainbow-border 1.5s linear infinite;
 }
 
+.primer, .segon, .tercer {
+  display: flex;
+  align-items: flex-end;
+}
+
+.primer > div, .segon > div, .tercer  > div{
+  font-size: 3rem;
+  opacity: 0.8;
+  color: #fff;
+  margin: 0 auto .5rem auto;
+  text-align: center;
+}
+
+#confetti.yeei {
+  height: 100%;
+  left: 0px;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  z-index: 1000;
+}
+
+.numeros {
+    font-size: 3rem;
+    font-family: 'Baloo Bhai', cursive;
+    font-weight: bold;
+    color: #E800E8;
+    -webkit-text-stroke: 2px purple;
+}
+
+.btn-figame {
+    font-family: 'Baloo Bhai', cursive;
+    position: relative;
+    z-index: 1500!important;
+}
+
+.nomswinners {
+    font-size: 1.5rem;
+    font-family: 'Baloo Bhai', cursive;
+    color: #292929;
+}
+
 .jugadors > .row.actual::before {
     position: absolute;
     left: 0;
@@ -597,11 +639,13 @@ button:focus {
 }
 
 .ranking {
+    font-family: 'Baloo Bhai', cursive;
     height: 60px;
     width: 60px;
     line-height: 60px;
     background-color: rgba(255, 255, 255, 0.3);
     color: #fff;
+    font-weight: bold;
     display: inline-block;
     text-align: center;
     position: relative;
@@ -624,17 +668,14 @@ button:focus {
     z-index: -1;
 }
 
-.log-container {
-
-}
-
 .log {
     border-radius: 10px;
-    background-color: #4B4B4B;
+    background-color: white;
+    border-color: grey;
     height: 300px;
     padding: 10px;
     overflow: auto;
-    text-shadow: 1px 1px 1px black;
+    text-shadow: 1px 1px 1px grey;
     font-size: 0.9rem;
 }
 
