--- a/templates/partida/joc.html.twig
+++ b/templates/partida/joc.html.twig
@@ -14,6 +14,7 @@
     <script src="{{ asset('bootstrap4/js/bootstrap.min.js') }}"></script>
 </head>
 <body>
+  <div id="confetti"></div>
   <div class="left-side col-2">
     <div class="points-container pl-3 pt-4">
     	<div class="points">
