--- a/public/css/joc.css
+++ b/public/css/joc.css
@@ -578,7 +578,8 @@ button:focus {
   position: fixed;
   top: 0px;
   width: 100%;
-  z-index: 1000;
+  z-index: 1051!important;
+  pointer-events: none!important;
 }
 
 .numeros {
@@ -592,7 +593,7 @@ button:focus {
 .btn-figame {
     font-family: 'Baloo Bhai', cursive;
     position: relative;
-    z-index: 1500!important;
+    z-index: 20000!important;
 }
 
 .nomswinners {
